--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -4,8 +4,8 @@
   font-weight: 400;
 
   color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
+  color: #d3af5e;
+  background-color: #005c32;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -54,9 +54,17 @@ button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
 }
 
+#contact-form {
+  display: flex;
+  flex-direction:  column;
+  gap: 1em;
+  max-width: 320px;
+  margin: 0 auto;
+}
+
 @media (prefers-color-scheme: light) {
   :root {
-    color: #213547;
+    color: #005c32;
     background-color: #ffffff;
   }
   a:hover {
